[package]
name = "atar-rocks-downloader"
version = "0.1.0"
edition = "2021"

[dependencies]
futures = "0.3.31"
glob = "0.3.1"
indicatif = { version = "0.17.9", features = ["tokio"] }
once_cell = "1.20.2"
rand = "0.8.5"
reqwest = { version = "0.12.9", features = ["brotli", "cookies", "gzip", "blocking"] }
scraper = "0.21.0"
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
toml = "0.8.19"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
